css/styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Arial', sans-serif;
    background-color: #f8f9fa;
    color: #333;
    line-height: 1.6;
    padding: 1.25em;
}

#input-item-container {
    display: flex;
    flex-direction: column;
    max-width: 600px;
    margin: 1.25em auto;
    border: 0.0625em solid #ddd;
    padding: 1.25em;
    background: #fff;
    border-radius: 5px;
    box-shadow: 0 .125 .25em rgba(0, 0, 0, 0.1);
}


#list-container {
    max-width: 600px;
    max-height: 400px; /* Add your desired maximum height here */
    overflow: auto; /* This will add scroll bars if the content exceeds the max height */
    margin: auto;
    border:0.0625em solid #ddd; /* Corrected the border property */
    padding: 1.25em;
    background: #fff;
    border-radius: 5px;
    box-shadow: 0 .125em .25em rgba(0, 0, 0, 0.1);
}



.list-item-container {
    display: flex;
    align-items: center;
    justify-content: center;
    /* margin-bottom: 10px; */
    gap: .625em;
}

.list-item-container label {
    flex: 1;
    margin-right: .625em;
}

.list-item-container input[type="text"],
.list-item-container input[type="number"] {
    padding: 0.3125em;
    border: 0.0625em solid #ddd;
    border-radius: 0.1875em;
    flex: 1;
    align-items: center;
}

.list-item-container input[type="checkbox"] {
    margin-left: 0.625em;
    align-items: center;

}

button {
    background: #007bff;
    color: #fff;
    border: none;
    padding: 0.625em 1.25em;
    border-radius: 5px;
    cursor: pointer;
    width: 100%;
    margin-top: 0.3125em;

}

button:hover {
    opacity: 0.8;
}

input[type="text"],
input[type="number"] {
    width: 100%;
    padding: 0.5em;
    margin-bottom: 0.625em;
    border-radius: 0.1875em;
    border: 0.0625em solid #ddd;
}

input[type="text"]:focus,
input[type="number"]:focus {
    border-color: #007bff;
    outline: none;
}

input[type="checkbox"]:disabled,
input[type="text"]:disabled,
input[type="number"]:disabled {
    background: #e9ecef;
    color: #6c757d;

}

button:disabled {
    background: #6c757d;
}


@media (max-width: 768px) {
    .list-item-container {
        flex-direction: row;
        align-items: stretch;
    }

    .list-item-container label {
        margin-bottom: 0.3125em;
    }

    .fixed-price {
      display: none;
    }
}

@media (max-width: 500px) {
    .list-item-container {
        flex-direction: row;
        align-items: wrap;
    }

    .list-item-container label {
        margin-bottom: 0.3125em;        
    }

    .fixed-price {
      display: none;
    }

    .number-of-items-input {
      width: 10%;
      background-color: red;
    }
}

